--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.38.0", features = ["full"] }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+headless_chrome = "1.0.10"
